# causal-eval-bench

./: .buildx.yml  .dependabot.yml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.json  .renovaterc.json  .safety-policy.yml  ARCHITECTURE.md  AUTONOMOUS_SDLC_QUANTUM_LEAP_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  AUTONOMOUS_SDLC_VALUE_DISCOVERY_REPORT.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_WORKFLOW_ACTIVATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_CHARTER.md  QUANTUM_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_ENHANCEMENT_SUMMARY.md  WORKFLOWS_ACTIVATION_GUIDE.md  (+54 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  sdlc_validation_results.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  release.yml  security.yml
.terragon/: config.yaml  latest-discovery.json  value-metrics.json
alembic/: env.py
causal_eval/: __init__.py  main.py
causal_eval/analysis/: __init__.py  benchmarking.py  error_analysis.py  profiling.py  statistical.py
causal_eval/api/: __init__.py  app.py
causal_eval/api/middleware/: __init__.py  enhanced_validation.py  monitoring.py  rate_limiting.py  validation.py
causal_eval/api/routes/: evaluation.py  evaluation_simple.py  health.py  leaderboard.py  tasks.py  tasks_simple.py
causal_eval/core/: __init__.py  advanced_concurrency.py  auto_scaling.py  caching.py  concurrency.py  engine.py  engine_robust.py  engine_scalable.py  error_handling.py  health_monitoring.py  logging_config.py  metrics.py  monitoring.py  performance_optimizer.py  security.py  tasks.py  validation.py
causal_eval/database/: __init__.py  connection.py  models.py
causal_eval/generation/: __init__.py  scenario_generator.py
causal_eval/i18n/: localization.py
causal_eval/integrations/: __init__.py  cache.py  model_apis.py  notifications.py
causal_eval/platform/: __init__.py  compatibility.py  deployment.py  production_deployment.py
causal_eval/repositories/: __init__.py  base.py  evaluation.py
causal_eval/research/: __init__.py  advanced_discovery.py  advanced_optimization.py  baseline_models.py  dataset_builder.py  enhanced_validation.py  experimental_framework.py  novel_algorithms.py  publication_tools.py  research_discovery.py  validation_suite.py
causal_eval/tasks/: __init__.py  attribution.py  chain.py  confounding.py  counterfactual.py  intervention.py
docker/grafana/dashboards/: causal-eval-overview.json  model-performance.json
docker/grafana/datasources/: prometheus.yml
docker/nginx/: nginx.conf
docker/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
docker/redis/: redis.conf
docs/: DEVELOPMENT.md  ROADMAP.md  SDLC_IMPLEMENTATION.md  SETUP_REQUIRED.md  TERRAGON_SDLC_COMPLETION.md  index.md
docs/adr/: 001-technology-stack.md  002-evaluation-framework-design.md
docs/advanced/: AI_INTEGRATION.md  CHAOS_ENGINEERING.md  DISASTER_RECOVERY.md  OBSERVABILITY.md  PERFORMANCE_OPTIMIZATION.md  SUPPLY_CHAIN_SECURITY.md
docs/deployment/: README.md
docs/getting-started/: installation.md
docs/guides/api/: reference.md
docs/guides/deployment/: production.md
docs/guides/developer/: contributing.md
docs/guides/user/: getting-started.md
docs/monitoring/: README.md
docs/repository/: CONFIGURATION.md
docs/runbooks/: incident-response.md
docs/testing/: README.md
docs/workflows/: ACTIVATION_GUIDE.md  GITHUB_ACTIONS_TEMPLATES.md  README.md  WORKFLOW_SETUP_GUIDE.md
docs/workflows/examples/: auto-update.yml  benchmark-suite.yml  cd.yml  ci.yml  dependency-update.yml  docker-build.yml  release.yml  security-scan.yml
docs/workflows/production-ready/: advanced-security.yml  performance-monitoring.yml  production-deployment.yml
scripts/: activate-workflows.sh  automation_manager.py  build.py  comprehensive_quality_gates.py  deploy.py  dev_setup.py  health_check.py  init-db.sql  license_header.txt  maintenance.py  metrics_collector.py  monitoring_setup.py  performance_test.py  quality_check.py  sdlc_validation.py  test_deployment_capabilities.py  value_discovery.py
tests/: conftest.py
tests/e2e/: test_example.py
tests/fixtures/: __init__.py  assertion_helpers.py  test_data.py
tests/helpers/: __init__.py  assertions.py
tests/integration/: test_api_evaluation.py  test_api_performance.py  test_example.py
tests/load/: locustfile.py
tests/performance/: test_benchmarks.py
tests/unit/: test_causal_attribution.py  test_evaluation_engine.py  test_example.py  test_performance_optimizer.py
